--- a/_posts/2019-07-03-the-us-narrative-today.html
+++ b/_posts/2019-07-03-the-us-narrative-today.html
@@ -2523,107 +2523,107 @@ stories:
   domain: http://www.themonitor.net/
   link: https://www.themonitor.net/article/annual-parade-begins-final-rodeo-day
 images:
-- name: stories-mosaic-face-blue-circuit-3.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-mosaic-face-blue-circuit-3.jpg
-- name: white-house-whitehouse.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse.jpg
-- name: old-granary-field-oldhouse-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-dali-two.jpg
-- name: san-francisco-street-view-san-francisco-street-view-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-wols.jpg
-- name: trucksilo-trucksilo-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-colorful-dream.jpg
-- name: beach-clouds-lifeguard-beachclouds-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-colorful-blocks.jpg
-- name: machine-road-machine-road-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-hot-spicy.jpg
-- name: crow_marcel_duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_marcel_duchamp.jpg
-- name: legal-statue-legalstatue-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-blue-granite.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-purple-storm.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-purple-storm.JPG
-- name: san-francisco-city-bridge-sf-city-bridge-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-purp-paper.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-feed-people.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-feed-people.jpg
-- name: subway-subway-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-aqua.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-bright-sand.jpg
-- name: ellis-island-ellis-island-room-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-hot-spicy.jpg
-- name: yosemite-yosemite-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-rainbow-festival.jpg
-- name: status-berlin-status-berlin-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-purp-paper.jpg
-- name: aws-s3-stories-containership-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-containership-dark-dali.jpg
-- name: ellis-island-ellisisland-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-atari-missle.jpg
-- name: beach-rocks-beach-rocks-currents-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-dark-soul.jpg
-- name: abe-lincoln-one-sand-paper-file-00-00-15-87.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-sand-paper-file-00-00-15-87.jpg
-- name: downtheline-downtheline-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-far-away.jpg
-- name: trucksilo-trucksilo-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-pablo-blue.jpg
-- name: old-granary-field-granaryfield-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-yellow-collage.jpg
-- name: legal-statue-legalstatue-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-emily-carr.jpg
-- name: oldhouse-oldhouse-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-ww2-dresden.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-colorful-dream.jpg
-- name: art-museum-art-museum-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-rainbow-festival.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-crunch-paper.jpg
-- name: carry-load-carryload-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-spagetti-accident.jpg
-- name: san-francisco-street-view-san-francisco-street-view-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-green-zuma.jpg
-- name: aws-s3-stories-vancouver-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-vancouver-light-dali.jpg
-- name: oldsmallboat-oldsmallboat-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-purple-pond.jpg
-- name: oldroad-old-road-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-smoking-cigarette.jpg
-- name: store-on-corner-oldcabin-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-aqua.jpg
-- name: cyber-api-description-wars-16402907-10154968484409813-8950624317719273541-o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cyber-api-description-wars-16402907-10154968484409813-8950624317719273541-o.jpg
-- name: mosaic-face-mosaic-face-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-really-hot.jpg
-- name: death-valley-death-valley-national-park-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-dali-two.jpg
-- name: razorcliff-razorcliff-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-alberto-giacometti.jpg
-- name: oldhouse-oldhouse-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-sand-paper.jpg
-- name: blossombar-crafty-painting-file-00-00-50-62.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-crafty-painting-file-00-00-50-62.jpg
-- name: bordercrossing-bordercrossing-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-internet-numbers.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-diego-rivera1.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-diego-rivera1.JPG
-- name: store-on-corner-oldcabin-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-matrix.jpg
-- name: store-on-corner-store-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-post-modern.jpg
-- name: crow_colored_circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_colored_circuits.jpg
-- name: downtown-trucksilo-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-sand-paper.jpg
-- name: old-granary-field-oldhouse-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-ww2-dresden.jpg
-- name: store-on-corner-oldcabin-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-colorful-dream.jpg
-- name: diamondcreek-diamondcreek-still-1200.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/diamondcreek-diamondcreek-still-1200.jpg
-- name: birdhouse-birdhouse-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-deep-connections.jpg
+- name: white-house-lawn-white-house-lawn-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-alien-goggles.jpg
+- name: eduardo-eduardo-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-bright-sand.jpg
+- name: downtheline-downtheline-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-kand-two.jpg
+- name: docks-docks-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-internet-numbers.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-blue-circuit-5.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-blue-circuit-5.JPG
+- name: crow_blue_granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_blue_granite.jpg
+- name: docks-docks-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-alberto-giacometti.jpg
+- name: oldcabin-store-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-mucha-mult.jpg
+- name: old-door-lock-old-door-lock-2-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-sunday.jpg
+- name: store-on-corner-store-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-smoking-cigarette.jpg
+- name: christianity-christianity-under-construction-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-alberto-giacometti.jpg
+- name: aws-s3-stories-green-gears-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-green-gears-matrix.jpg
+- name: art-museum-art-museum-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-yellow-paper.jpg
+- name: old-house-oldhouse-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-blue-electricity.jpg
+- name: oldbarn-oldbarn-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-rainbow-festival.jpg
+- name: paris-paris-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-blue-circuit.jpg
+- name: rain-princess-DSC_0102.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-DSC_0102.jpg
+- name: oldhouse-granaryfield-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-ww2-dresden.jpg
+- name: oldsmallboat-oldsmallboat-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-internet-numbers.jpg
+- name: curtain-curtain-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-diego-rivera1.jpg
+- name: fence-gorilla-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-gorilla-dark-dali.jpg
+- name: meadowbutterfly-meadow-butterfly-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-colorful-dream.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-alberto-giacometti.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-alberto-giacometti.JPG
+- name: oldhousecars-house-old-cars-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-dark-rain.jpg
+- name: dragon-desert-desert-dragon-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-dark-soul.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-graham-sutherland.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-graham-sutherland.JPG
+- name: abe-lincoln-one-umberto-bocc-file-00-00-15-87.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-umberto-bocc-file-00-00-15-87.jpg
+- name: oldhousecars-house-old-cars-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-cinnamon-rolls.jpg
+- name: windowmountain-window-mountain-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-satan-red.jpg
+- name: oldhouse-granaryfield-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-dali-two.jpg
+- name: meadowbutterfly-meadow-butterfly.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly.jpg
+- name: windowmountain-window-mountain-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-kandinsky-bv.jpg
+- name: border-crossing-bordercrossing-internet-numbers.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-internet-numbers.png
+- name: mediterranean-mediterranean-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-hot-spicy.jpg
+- name: christianity-christianity-under-construction-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-sand-paper.jpg
+- name: catacombs-catacombs-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-dali-three.jpg
+- name: aws-s3-stories-DSC-0084-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-DSC-0084-dali-three.jpg
+- name: copper-circuit-IMG_4430.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-IMG_4430.jpg
+- name: christianity-christianity-under-construction-blue-circuit-3.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-blue-circuit-3.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-feed-people.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-feed-people.jpg
+- name: border-crossing-bordercrossing-crunch-paper.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-crunch-paper.png
+- name: sand-hand-sand-hand-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-neo-instinct.jpg
+- name: oldtrain-oldtrain-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-neo-instinct.jpg
+- name: downtown-los-angeles-downtown-la-purp-paper.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-purp-paper.JPG
+- name: lincoln-memorial-lincolnmemorial-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-wols.jpg
+- name: nazi-invasion-DSC_0072.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-DSC_0072.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-feed-people.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-feed-people.JPG
+- name: school-clouds-church-clouds-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-nazi-poster.jpg
+- name: blossombar-crafty-painting-file-00-00-50-48.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-crafty-painting-file-00-00-50-48.jpg
+- name: abandonedbuildings_dark_dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_dark_dali.jpg
+- name: castle-wall-DSC-0067-bright-sand.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-bright-sand.JPG
 ---
 Property Transfers Recorded In Waushara County.&nbsp;Council Names Citizens To Fill Local Boards.&nbsp;Blake Gipson And Case Kermode.&nbsp;City OKs Doubling Of Council Wages.&nbsp;Some Big Farms Collect Big Checks From Trump Aid Package.&nbsp;Facebook Says Some Users Facing Outage On Its Platforms.&nbsp;July Calendar Of Events.&nbsp;Remains Believed To Be Missing Hampton Toddler Found At Steam Plant.&nbsp;
